Using Set.of (of java 9)